@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form col="2">
+    <image name="tryton-warning" xexpand="0" xfill="0"/>
+    <separator string="Unable to assign these products:" id="unable"/>
+    <field name="moves" colspan="2" view_ids="stock.move_view_tree_simple"/>
+</form>
