@@ -1,3 +1,4 @@
+* Use a single assign wizard for all shipments
 * Add access rules to product quantities by warehouse
 * Add moves for product quantities by warehouse
 * Enforce filling cost price of move
